// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generation prompt golden master > creative prompt is unchanged 1`] = `
"Create a 3-day Egypt itinerary.


=================================================================
EGYPTIAN TRAVEL INDUSTRY ABBREVIATIONS - COMPREHENSIVE GLOSSARY
=================================================================

CRITICAL: You MUST decode these abbreviations and follow the itinerary EXACTLY as written.
DO NOT add, remove, or reorder any activities. Convert ONLY what is written.

-----------------------------------------------------------------
AIRPORT & CITY CODES (IATA CODES)
-----------------------------------------------------------------
CAI = Cairo (Cairo International Airport)
ALX / ALY = Alexandria (Borg El Arab Airport)
ASW = Aswan (Aswan International Airport)
LXR = Luxor (Luxor International Airport)
HRG = Hurghada (Hurghada International Airport)
SSH = Sharm El Sheikh (Sharm El Sheikh International Airport)
RMF = Marsa Alam (Marsa Alam International Airport)
ABS = Abu Simbel (Abu Simbel Airport)
ATZ = Assiut (Assiut Airport)
MUH = Marsa Matrouh (Marsa Matrouh Airport)
PSD = Port Said (Port Said Airport)
TCP = Taba (Taba International Airport)
SKV = St. Catherine (St. Catherine International Airport)
HMB = Sohag (Sohag International Airport)
SPX = Sphinx/Giza (Sphinx International Airport)
DBB = Dabaa / El Alamein area
DAK = Dakhla Oasis (Dakhla Oasis Airport)
AAC = El Arish (El Arish International Airport)
EGH = El Gora (El Gora Airport)
UVL = El Kharga (El Kharga Airport)

COMMON CITY ABBREVIATIONS (non-IATA):
GZA = Giza
KOM = Kom Ombo
EDU / EDFU = Edfu
ESN = Esna
ABY = Abydos
DEN = Dendera
SAQ = Saqqara / Sakkara
MEM = Memphis
FAY = Fayoum
SIW = Siwa Oasis

-----------------------------------------------------------------
AIRLINE CODES (IATA)
-----------------------------------------------------------------
MS = EgyptAir (Egypt's national carrier)
BA = British Airways
TK = Turkish Airlines
QR = Qatar Airways
EK = Emirates
EY = Etihad Airways
LH = Lufthansa
AF = Air France
KL = KLM Royal Dutch
IB = Iberia
AZ = Alitalia / ITA Airways
SU = Aeroflot
FZ = FlyDubai
G9 = Air Arabia
XY = flynas
SV = Saudia (Saudi Arabian Airlines)
RJ = Royal Jordanian
ME = Middle East Airlines
GF = Gulf Air
WY = Oman Air
KU = Kuwait Airways
OS = Austrian Airlines
LX = Swiss International
SK = Scandinavian Airlines
AY = Finnair
LO = LOT Polish Airlines
NP = Nile Air (Egyptian low-cost)
SM = Air Cairo

-----------------------------------------------------------------
ACCOMMODATION CODES
-----------------------------------------------------------------
NTS = Nights (e.g., "3NTS" = 3 nights stay)
HTL = Hotel
CRZ = Cruise / Nile Cruise
OVN = Overnight
C/IN = Check-in
C/OUT = Check-out (disembarkation from cruise)

MEAL PLANS:
RO = Room Only (no meals)
BB = Bed & Breakfast (breakfast only)
HB = Half Board (breakfast + dinner)
FB = Full Board (breakfast + lunch + dinner)
AI = All Inclusive (all meals + drinks + snacks)
UAI = Ultra All Inclusive (premium AI with top-shelf drinks, room service)
SC = Self Catering

-----------------------------------------------------------------
DAY & TIME NOTATION
-----------------------------------------------------------------
D1, D2, D3... = Day 1, Day 2, Day 3...
"D1 CAI" = Day 1 in Cairo
"D3 CAI/ASW" = Day 3: Travel from Cairo to Aswan
"/" between cities = transfer/travel between those cities
@ = at (time), e.g., "arrive @05:10" = arrive at 05:10

-----------------------------------------------------------------
CRITICAL: ENTRANCE FEE MARKERS
-----------------------------------------------------------------
(INSIDE) = Entrance fee REQUIRED - guests will enter the site
(OUTSIDE) = NO entrance fee - photo stop only, viewing from outside

Examples:
- "Alexandria Library (OUTSIDE)" = Photo stop, NO entrance fee
- "Pompey's Pillar (INSIDE)" = Entrance fee required
- "Pyramids" with no marker = Assume entrance included

-----------------------------------------------------------------
FREE DAYS AND SAILING DAYS
-----------------------------------------------------------------
When a day shows ONLY the location with NO activities:
- "D5 CRZ" = Sailing day on cruise (no tours, relaxing on board)
- "D8 HRG" = Free day in Hurghada (no scheduled activities)

Convert these to:
- Sailing days: title = "Sailing Day" or "Day at Leisure on Nile"
- Free days: title = "Free Day" or "Day at Leisure"

-----------------------------------------------------------------
MEALS IN ITINERARY
-----------------------------------------------------------------
B = Breakfast
L = Lunch
D = Dinner
"L" at end of day = Lunch included
"Chinese Dinner" = Dinner at Chinese restaurant
"Pigeon Lunch" = Lunch featuring Egyptian pigeon dish

-----------------------------------------------------------------
AIRPORT & HOTEL SERVICES (EGYPT TRAVEL INDUSTRY STANDARD)
-----------------------------------------------------------------

AIRPORT SERVICES (add when flights arrive/depart):
- International arrival: Airport meet & assist, visa assistance, luggage help, transfer to vehicle
- Domestic arrival: Airport meet & assist, luggage help, transfer to vehicle
- Departure: Hotel to airport transfer, check-in assistance

HOTEL SERVICES (add when):
- Check-in to hotel (first time in a city)
- Check-out from hotel (leaving city)
- Check-in to cruise (C/IN CRZ, "check in CRZ")
- Check-out from cruise (C/OUT CRZ)
- Moving from one city to another

-----------------------------------------------------------------
COMMON PATTERNS - EXAMPLES
-----------------------------------------------------------------
"2NTS CAI + 3NTS CRZ + 3NTS HRG"
= 2 nights Cairo + 3 nights Cruise + 3 nights Hurghada
= Total: 2+3+3 = 8 nights = 9 DAYS

"D1 CAI/ALX/CAI Arrive MS956@05:10, Pompey's Pillar (INSIDE), Library (OUTSIDE), L, back to CAI"
= Day 1: Arrive Cairo, then FULL DAY TRIP to Alexandria with sites, lunch, return to Cairo
= This is NOT just arrival - it's arrival + full day tour!

"D5 CRZ" (with nothing else)
= Day 5: Sailing day, no activities, relaxing on cruise

"D8 HRG" (with nothing else)
= Day 8: Free day in Hurghada, no scheduled activities

"C/OUT CRZ, LXR/HRG" = Check out of cruise, then travel from Luxor to Hurghada

-----------------------------------------------------------------
IMPORTANT CALCULATION RULE
-----------------------------------------------------------------
Number of DAYS = Number of NIGHTS + 1

Example: "2NTS CAI + 3NTS CRZ + 3NTS HRG"
- Nights: 2 + 3 + 3 = 8 nights
- Days: 8 + 1 = 9 days (D1 through D9)

-----------------------------------------------------------------
CRITICAL RULE: FOLLOW EXACTLY
-----------------------------------------------------------------
DO NOT add attractions not mentioned in the original!
DO NOT reorder days!
DO NOT skip any day!
If Abu Simbel is NOT mentioned, do NOT add it!
If a day just says "CRZ", it's a SAILING day with NO tours!
=================================================================


CLIENT: Test Client
TOUR: Test Tour
DATE: 2026-12-01
TRAVELERS: 2 adults
TIER: STANDARD (comfortable mid-range)
CITIES: Cairo
INTERESTS: history


AVAILABLE ATTRACTIONS (use EXACT names):
Giza Plateau, Egyptian Museum
CONTENT:
test content
WRITING RULES:
- test rule

PACKAGE INCLUDES:
- Transportation: Yes (private vehicle)
- Guide: Yes (English speaking)
- Entrance Fees: Yes
- Lunch: Yes
- Dinner: No
- Hotels: Yes (except last day)

PLANNING GUIDELINES:
1. Create a logical flow between cities (don't jump around)
2. First day typically arrival + lighter activities
3. Last day typically departure transfer
4. Group nearby attractions on the same day
5. Include realistic driving times
6. For standard tier: comfortable mid-range

Return ONLY valid JSON:
{
  "trip_name": "Descriptive Trip Name",
  "total_days": 3,
  "days": [
    {
      "day_number": 1,
      "title": "Day 1: Arrival in Cairo",
      "description": "Professional 2-3 sentence description of the day",
      "city": "Cairo",
      "overnight_city": "Cairo",
      "is_arrival": true,
      "is_departure": false,
      "is_transfer_only": false,
      "attractions": ["Exact Attraction Name"],
      "guide_required": true,
      "includes_lunch": true,
      "includes_dinner": false,
      "includes_hotel": true
    }
  ]
}

Use EXACT attraction names from the provided list. Set includes_hotel to false on the last day."
`;

exports[`generation prompt golden master > structured prompt is unchanged 1`] = `
"You are a DATA CONVERTER. Your ONLY task is to convert travel agent shorthand into JSON format.

⛔ THIS IS NOT A CREATIVE TASK ⛔
You are NOT designing an itinerary. You are CONVERTING an existing one.


=================================================================
EGYPTIAN TRAVEL INDUSTRY ABBREVIATIONS - COMPREHENSIVE GLOSSARY
=================================================================

CRITICAL: You MUST decode these abbreviations and follow the itinerary EXACTLY as written.
DO NOT add, remove, or reorder any activities. Convert ONLY what is written.

-----------------------------------------------------------------
AIRPORT & CITY CODES (IATA CODES)
-----------------------------------------------------------------
CAI = Cairo (Cairo International Airport)
ALX / ALY = Alexandria (Borg El Arab Airport)
ASW = Aswan (Aswan International Airport)
LXR = Luxor (Luxor International Airport)
HRG = Hurghada (Hurghada International Airport)
SSH = Sharm El Sheikh (Sharm El Sheikh International Airport)
RMF = Marsa Alam (Marsa Alam International Airport)
ABS = Abu Simbel (Abu Simbel Airport)
ATZ = Assiut (Assiut Airport)
MUH = Marsa Matrouh (Marsa Matrouh Airport)
PSD = Port Said (Port Said Airport)
TCP = Taba (Taba International Airport)
SKV = St. Catherine (St. Catherine International Airport)
HMB = Sohag (Sohag International Airport)
SPX = Sphinx/Giza (Sphinx International Airport)
DBB = Dabaa / El Alamein area
DAK = Dakhla Oasis (Dakhla Oasis Airport)
AAC = El Arish (El Arish International Airport)
EGH = El Gora (El Gora Airport)
UVL = El Kharga (El Kharga Airport)

COMMON CITY ABBREVIATIONS (non-IATA):
GZA = Giza
KOM = Kom Ombo
EDU / EDFU = Edfu
ESN = Esna
ABY = Abydos
DEN = Dendera
SAQ = Saqqara / Sakkara
MEM = Memphis
FAY = Fayoum
SIW = Siwa Oasis

-----------------------------------------------------------------
AIRLINE CODES (IATA)
-----------------------------------------------------------------
MS = EgyptAir (Egypt's national carrier)
BA = British Airways
TK = Turkish Airlines
QR = Qatar Airways
EK = Emirates
EY = Etihad Airways
LH = Lufthansa
AF = Air France
KL = KLM Royal Dutch
IB = Iberia
AZ = Alitalia / ITA Airways
SU = Aeroflot
FZ = FlyDubai
G9 = Air Arabia
XY = flynas
SV = Saudia (Saudi Arabian Airlines)
RJ = Royal Jordanian
ME = Middle East Airlines
GF = Gulf Air
WY = Oman Air
KU = Kuwait Airways
OS = Austrian Airlines
LX = Swiss International
SK = Scandinavian Airlines
AY = Finnair
LO = LOT Polish Airlines
NP = Nile Air (Egyptian low-cost)
SM = Air Cairo

-----------------------------------------------------------------
ACCOMMODATION CODES
-----------------------------------------------------------------
NTS = Nights (e.g., "3NTS" = 3 nights stay)
HTL = Hotel
CRZ = Cruise / Nile Cruise
OVN = Overnight
C/IN = Check-in
C/OUT = Check-out (disembarkation from cruise)

MEAL PLANS:
RO = Room Only (no meals)
BB = Bed & Breakfast (breakfast only)
HB = Half Board (breakfast + dinner)
FB = Full Board (breakfast + lunch + dinner)
AI = All Inclusive (all meals + drinks + snacks)
UAI = Ultra All Inclusive (premium AI with top-shelf drinks, room service)
SC = Self Catering

-----------------------------------------------------------------
DAY & TIME NOTATION
-----------------------------------------------------------------
D1, D2, D3... = Day 1, Day 2, Day 3...
"D1 CAI" = Day 1 in Cairo
"D3 CAI/ASW" = Day 3: Travel from Cairo to Aswan
"/" between cities = transfer/travel between those cities
@ = at (time), e.g., "arrive @05:10" = arrive at 05:10

-----------------------------------------------------------------
CRITICAL: ENTRANCE FEE MARKERS
-----------------------------------------------------------------
(INSIDE) = Entrance fee REQUIRED - guests will enter the site
(OUTSIDE) = NO entrance fee - photo stop only, viewing from outside

Examples:
- "Alexandria Library (OUTSIDE)" = Photo stop, NO entrance fee
- "Pompey's Pillar (INSIDE)" = Entrance fee required
- "Pyramids" with no marker = Assume entrance included

-----------------------------------------------------------------
FREE DAYS AND SAILING DAYS
-----------------------------------------------------------------
When a day shows ONLY the location with NO activities:
- "D5 CRZ" = Sailing day on cruise (no tours, relaxing on board)
- "D8 HRG" = Free day in Hurghada (no scheduled activities)

Convert these to:
- Sailing days: title = "Sailing Day" or "Day at Leisure on Nile"
- Free days: title = "Free Day" or "Day at Leisure"

-----------------------------------------------------------------
MEALS IN ITINERARY
-----------------------------------------------------------------
B = Breakfast
L = Lunch
D = Dinner
"L" at end of day = Lunch included
"Chinese Dinner" = Dinner at Chinese restaurant
"Pigeon Lunch" = Lunch featuring Egyptian pigeon dish

-----------------------------------------------------------------
AIRPORT & HOTEL SERVICES (EGYPT TRAVEL INDUSTRY STANDARD)
-----------------------------------------------------------------

AIRPORT SERVICES (add when flights arrive/depart):
- International arrival: Airport meet & assist, visa assistance, luggage help, transfer to vehicle
- Domestic arrival: Airport meet & assist, luggage help, transfer to vehicle
- Departure: Hotel to airport transfer, check-in assistance

HOTEL SERVICES (add when):
- Check-in to hotel (first time in a city)
- Check-out from hotel (leaving city)
- Check-in to cruise (C/IN CRZ, "check in CRZ")
- Check-out from cruise (C/OUT CRZ)
- Moving from one city to another

-----------------------------------------------------------------
COMMON PATTERNS - EXAMPLES
-----------------------------------------------------------------
"2NTS CAI + 3NTS CRZ + 3NTS HRG"
= 2 nights Cairo + 3 nights Cruise + 3 nights Hurghada
= Total: 2+3+3 = 8 nights = 9 DAYS

"D1 CAI/ALX/CAI Arrive MS956@05:10, Pompey's Pillar (INSIDE), Library (OUTSIDE), L, back to CAI"
= Day 1: Arrive Cairo, then FULL DAY TRIP to Alexandria with sites, lunch, return to Cairo
= This is NOT just arrival - it's arrival + full day tour!

"D5 CRZ" (with nothing else)
= Day 5: Sailing day, no activities, relaxing on cruise

"D8 HRG" (with nothing else)
= Day 8: Free day in Hurghada, no scheduled activities

"C/OUT CRZ, LXR/HRG" = Check out of cruise, then travel from Luxor to Hurghada

-----------------------------------------------------------------
IMPORTANT CALCULATION RULE
-----------------------------------------------------------------
Number of DAYS = Number of NIGHTS + 1

Example: "2NTS CAI + 3NTS CRZ + 3NTS HRG"
- Nights: 2 + 3 + 3 = 8 nights
- Days: 8 + 1 = 9 days (D1 through D9)

-----------------------------------------------------------------
CRITICAL RULE: FOLLOW EXACTLY
-----------------------------------------------------------------
DO NOT add attractions not mentioned in the original!
DO NOT reorder days!
DO NOT skip any day!
If Abu Simbel is NOT mentioned, do NOT add it!
If a day just says "CRZ", it's a SAILING day with NO tours!
=================================================================


═══════════════════════════════════════════════════════════════
⛔ FORBIDDEN ACTIONS - VIOLATING THESE IS A CRITICAL ERROR ⛔
═══════════════════════════════════════════════════════════════

1. FORBIDDEN: Adding attractions NOT in the input
   - If Abu Simbel is not mentioned → DO NOT ADD IT
   - If Unfinished Obelisk is not mentioned → DO NOT ADD IT
   - If Grand Museum is not mentioned → DO NOT ADD IT

2. FORBIDDEN: Removing or skipping activities from input
   - If D1 says "Alexandria tour" → Day 1 MUST include Alexandria
   - If D2 says "Pyramids & Museum" → Day 2 MUST include BOTH

3. FORBIDDEN: Reordering days or activities
   - D1 content goes in day_number: 1
   - D2 content goes in day_number: 2
   - NEVER put D1 content in day_number: 2

4. FORBIDDEN: "Improving" the itinerary
   - Do NOT add sites you think they "should" visit
   - Do NOT rearrange for "better flow"
   - Do NOT combine or split days

═══════════════════════════════════════════════════════════════
📋 EXACT DAY-BY-DAY INPUT TO CONVERT
═══════════════════════════════════════════════════════════════

DAY 1 INPUT (CONVERT THIS EXACTLY):
───
D1 CAI arrival
───

═══════════════════════════════════════════════════════════════
📋 FULL RAW ITINERARY (for reference)
═══════════════════════════════════════════════════════════════
D1 CAI arrival
D2 CAI/ALX/CAI day trip
D3 CAI departure

═══════════════════════════════════════════════════════════════
🔍 DECODING RULES
═══════════════════════════════════════════════════════════════

CITY CODES:
CAI=Cairo, ALX=Alexandria, ASW=Aswan, LXR=Luxor, HRG=Hurghada, CRZ=Cruise

MULTI-CITY PATTERN:
"D1 CAI/ALX/CAI" = Day trip: Arrive Cairo → Visit Alexandria → Return Cairo
This is NOT just "Arrival" - it's arrival PLUS a FULL DAY TOUR!

ENTRANCE MARKERS:
(INSIDE) = Entrance fee required → add to entrance_included[]
(OUTSIDE) = Photo stop only → add to photo_stops[] (NO entrance fee)

FREE DAYS:
"D5 CRZ" with nothing else = Sailing day → is_free_day: true, is_sailing_day: true
"D8 HRG" with nothing else = Free day → is_free_day: true

MEALS:
L = Lunch included
D = Dinner included
"Chinese Dinner" = Dinner at Chinese restaurant
"Pigeon Lunch" = Lunch with Egyptian pigeon dish

FLIGHTS:
MS956@05:10 = EgyptAir flight 956 at 05:10
"DEPARTED BY MS955@23:20" = Departure flight at 23:20

═══════════════════════════════════════════════════════════════
⚙️ CONFIGURATION
═══════════════════════════════════════════════════════════════
TOTAL DAYS: 3
TIER: STANDARD
TRAVELERS: 2
LANGUAGE: English
PACKAGE: land-package

═══════════════════════════════════════════════════════════════
📤 OUTPUT FORMAT (Return ONLY valid JSON)
═══════════════════════════════════════════════════════════════

{
  "trip_name": "Egypt: Cairo, Nile Cruise & Hurghada",
  "total_days": 3,
  "days": [
    {
      "day_number": 1,
      "date": null,
      "title": "Day 1: Arrival & Alexandria Day Trip",
      "description": "2-3 sentences describing ONLY what is in the input",
      "city": "Cairo",
      "cities_visited": ["Cairo", "Alexandria"],
      "overnight_city": "Cairo",
      "accommodation_type": "hotel",

      "is_arrival": true,
      "is_departure": false,
      "is_transfer_only": false,
      "is_free_day": false,
      "is_cruise_day": false,
      "is_sailing_day": false,

      "attractions": ["Pompey's Pillar", "Qaitbay Citadel", "Alexandria Library", "Montazah Park"],
      "entrance_included": ["Pompey's Pillar", "Qaitbay Citadel", "Montazah Park"],
      "photo_stops": ["Alexandria Library"],

      "activities": ["Airport arrival", "Transfer to Alexandria", "Visit Pompey's Pillar", "Visit Qaitbay Citadel", "Photo stop at Alexandria Library", "Visit Montazah Park", "Lunch", "Return to Cairo", "Dinner"],
      "guide_required": true,

      "includes_lunch": true,
      "includes_dinner": true,
      "meal_notes": null,

      "flight_info": "MS956 arriving 05:10",
      "transport_type": "flight",

      "needs_airport_service": true,
      "needs_hotel_service": true
    }
  ]
}

═══════════════════════════════════════════════════════════════
✅ VERIFICATION CHECKLIST (Complete before responding)
═══════════════════════════════════════════════════════════════

□ I have exactly 3 day objects in my response
□ Day 1 contains ALL activities from D1 input (not just "arrival")
□ Day 2 contains ALL activities from D2 input
□ Each day's content matches ONLY what was in that day's input
□ I did NOT add Abu Simbel, Unfinished Obelisk, or other sites not mentioned
□ Free/sailing days have is_free_day: true
□ INSIDE attractions are in entrance_included (with fee)
□ OUTSIDE attractions are in photo_stops (NO fee)
□ Flight arrivals have needs_airport_service: true
□ The last day with activities includes everything mentioned (not just "departure")

NOW CONVERT THE ITINERARY TO JSON:"
`;
